--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ html, body {
     background: linear-gradient(45deg, #7482ff, #f48321, #d2001a, #7482ff, #f48321);
     background-size: 300% 300%;
     animation: color 20s ease-in-out infinite;
+    height: 100%;
 }
 
 .card {
